--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -1,13 +1,7 @@
 FROM python:3.7-slim
-
 WORKDIR /app
-
 ADD . /app
-
 RUN apt-get update && apt-get install -y libgomp1
-
-RUN pip install --trusted-host pypi.python.org -r requirements.txt
-
+RUN pip install pycaret==2.0
 ENTRYPOINT ["python"]
-
 CMD ["/app/app.py"]
