--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3.7-slim
 WORKDIR /app
 ADD . /app
 RUN apt-get update && apt-get install -y libgomp1
-RUN pip install pycaret==2.0
+RUN pip install -r requirements.txt
 ENTRYPOINT ["python"]
 CMD ["/app/app.py"]
