--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -2,9 +2,7 @@ FROM python:3.7-slim
 WORKDIR /app
 ADD . /app
 RUN apt-get update && apt-get install -y libgomp1
-COPY requirements.txt /tmp/
-RUN pip install --requirement /tmp/requirements.txt
-COPY . /tmp/
-
+RUN pip install --upgrade setuptools
+RUN pip install -r requirements.txt
 ENTRYPOINT ["python"]
 CMD ["/app/app.py"]
