--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /app
 ADD . /app
 RUN apt-get update && apt-get install -y libgomp1
 RUN pip install --upgrade setuptools
-RUN pip install -r requirements.txt
+RUN pip install pycaret
 ENTRYPOINT ["python"]
 CMD ["/app/app.py"]
