--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -3,8 +3,8 @@ WORKDIR /app
 ADD . /app
 RUN apt-get update && apt-get install -y libgomp1
 RUN pip install --upgrade setuptools
-RUN pip install p5py
-RUN pip install pep517
+RUN pip install PyPI
+RUN pip install pyinstaller
 RUN pip install pycaret
 ENTRYPOINT ["python"]
 CMD ["/app/app.py"]
