--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 ADD . /app
 RUN apt-get update && apt-get install -y libgomp1
 RUN pip install --upgrade setuptools
-RUN pip install --upgrade pip setuptools wheel
-RUN pip install pycaret
+COPY requirements.txt /tmp/
+RUN pip install -r /tmp/requirements.txt
 ENTRYPOINT ["python"]
 CMD ["/app/app.py"]
