--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -2,8 +2,5 @@ FROM python:3.7-slim
 WORKDIR /app
 ADD . /app
 RUN apt-get update && apt-get install -y libgomp1
-RUN pip install --upgrade setuptools
-COPY requirements.txt /tmp/
-RUN pip install -r /tmp/requirements.txt
-ENTRYPOINT ["python"]
+RUN pip install --trusted-host pypi.python.org -r requirements.txt
 CMD ["/app/app.py"]
