--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -2,5 +2,6 @@ FROM python:3.7-slim
 WORKDIR /app
 ADD . /app
 RUN apt-get update && apt-get install -y libgomp1
+RUN apt-get install gcc
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 CMD ["/app/app.py"]
