--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.7-slim
 WORKDIR /app
 ADD . /app
 RUN apt-get update && apt-get install -y libgomp1
+RUN pip install pip==18.1
 RUN pip install bottleneck
 RUN pip install pycaret
 CMD ["/app/app.py"]
