--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -7,5 +7,5 @@ RUN pip install opencv-python
 RUN pip install PyPI
 RUN pip install pyinstaller
 RUN pip install bottleneck
-RUN pip install pycaret
+RUN pip install --trusted-host pypi.python.org -r requirements.txt
 CMD ["/app/app.py"]
