--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.7-slim
 WORKDIR /app
 ADD . /app
 RUN apt-get update && apt-get install -y libgomp1$
-RUN conda install bottleneck
+RUN pip install bottleneck
 RUN pip install --upgrade pip setuptools wheel
 RUN pip install PyPI
 RUN pip install pyinstaller
